# ValorCaracteristico

./: CMakeLists.txt  MetodoPotencias.cpp  MetodoPotencias.h  MetodoQR.cpp  MetodoQR.h  README.md  ValorCaracteristico.cpp  ValorCaracteristico.h
